Migration to ESP32Board library

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,29 @@
 default_envs = pax-Gateway
 
 [env]
-platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = esp32dev
 monitor_speed = 115200
-board_build.partitions = default.csv
+board_build.partitions = partitions4M_1600_832_nk.csv
+board_build.filesystem = spiffs
+framework = arduino
 
 [env:pax-Gateway]
-framework = arduino
+build_flags =
+    -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
+    -D CONFIG_ARDUHAL_ESP_LOG
+    -D CONFIG_ASYNC_TCP_STACK_SIZE=4096
+    -D RH_ESP32_USE_HSPI
+    -D RFM69_HW
+    -D Radio_RFM69
+    ; -D SS316_DISPLAY
+lib_compat_mode = strict
+lib_ldf_mode = deep
+lib_deps =
+    ESP32Async/AsyncTCP
+    ESP32Async/ESPAsyncWebServer
+    FS
+    SPIFFS
+; extra_scripts =
+;     post:copy_firmware.py
+
