--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ build_flags =
     -D RH_ESP32_USE_HSPI
     -D RFM69_HW
     -D Radio_RFM69
-    ; -D SS316_DISPLAY
+    -D SSD1306_DISPLAY
 lib_compat_mode = strict
 lib_ldf_mode = deep
 lib_deps =
@@ -35,6 +35,7 @@ lib_deps =
     ESP32Async/ESPAsyncWebServer
     FS
     SPIFFS
+    adafruit/Adafruit SSD1306@^2.5.16
 ; extra_scripts =
 ;     post:copy_firmware.py
 
