Added display control functions

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ build_flags =
     -D RFM69_HW
     -D Radio_RFM69
     -D SSD1306_DISPLAY
+    -D SSD1306_NO_SPLASH
 lib_compat_mode = strict
 lib_ldf_mode = deep
 lib_deps =
