--- a/platformio.ini
+++ b/platformio.ini
@@ -9,14 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = pax-Gateway
+; default_envs = pax-Gateway
+default_envs = pax-Test
 
 [env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = esp32dev
 monitor_speed = 115200
-board_build.partitions = partitions4M_1600_832_nk.csv
-board_build.filesystem = spiffs
+board_build.partitions = partitions4M_1600_760_nk.csv
+board_build.filesystem = littlefs
 framework = arduino
 
 [env:pax-Gateway]
@@ -36,3 +37,13 @@ lib_deps =
 ; extra_scripts =
 ;     post:copy_firmware.py
 
+[env:pax-Test]
+build_flags =
+    -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
+    -D CONFIG_ARDUHAL_ESP_LOG
+    -D CONFIG_ASYNC_TCP_STACK_SIZE=4096
+lib_compat_mode = strict
+lib_ldf_mode = deep
+lib_deps =
+; extra_scripts =
+;     post:copy_firmware.py
